feat: remove redirect rpc and implement healthz endpoint
